--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
       - ./db-init:/docker-entrypoint-initdb.d
-      
+
   redis_clasic_lru:
     image: redis:latest
     ports:
@@ -23,7 +23,7 @@ services:
       - redis_clasic_lru_data:/data
     environment:
       - REDIS_PASSWORD=tilines
-    command: ["redis-server", "--appendonly", "no", "--maxmemory", "256mb", "--maxmemory-policy", "allkeys-lru"]
+    command: ["redis-server", "--appendonly", "no", "--maxmemory", "256mb", "--maxmemory-policy", "allkeys-lru", "--requirepass", "tilines"]
 
 volumes:
   db_data:
