--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@grpc/grpc-js": "^1.7.0",
     "@grpc/proto-loader": "^0.7.2",
     "express": "^4.18.1",
+    "ioredis": "^5.4.0",
     "redis": "^4.3.1"
   },
   "devDependencies": {
