--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@grpc/grpc-js": "^1.10.6",
     "@grpc/proto-loader": "^0.7.12",
     "express": "^4.19.2",
+    "ioredis": "^5.4.0",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
