--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.7.0",
     "@grpc/proto-loader": "^0.7.2",
+    "ioredis": "^5.4.0",
     "postgres": "^3.2.4"
   },
   "devDependencies": {
