--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@grpc/proto-loader": "^0.7.2",
     "express": "^4.18.1",
     "ioredis": "^5.4.0",
+    "lodash.random": "^3.2.0",
     "redis": "^4.3.1"
   },
   "devDependencies": {
