Arregle la conf pq no tenia lru

--- a/redis-node3.conf
+++ b/redis-node3.conf
@@ -2,4 +2,6 @@ port 6381
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
+maxmemory 2mb
+maxmemory-policy allkeys-lru
 appendonly yes
