--- a/redis-node1.conf
+++ b/redis-node1.conf
@@ -2,4 +2,6 @@ port 6379
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
+maxmemory 2mb
+maxmemory-policy allkeys-lru
 appendonly yes
