--- a/docker-compose-replica-volatile-ttl.yml
+++ b/docker-compose-replica-volatile-ttl.yml
@@ -6,7 +6,7 @@ services:
     environment:
       - REDIS_REPLICATION_MODE=master
       - REDIS_PASSWORD=master1234
-    command: /opt/bitnami/scripts/redis/run.sh --maxmemory-policy noeviction --maxmemory 256mb
+    command: /opt/bitnami/scripts/redis/run.sh --maxmemory-policy volatile-ttl --maxmemory 2mb
 
   redis-replica-uno:
     image: 'bitnami/redis:7.0.4-debian-11-r23'
@@ -20,7 +20,7 @@ services:
       - REDIS_MASTER_PORT_NUMBER=6379
       - REDIS_MASTER_PASSWORD=master1234
       - REDIS_PASSWORD=replica1234
-    command: /opt/bitnami/scripts/redis/run.sh --maxmemory-policy noeviction --maxmemory 256mb
+    command: /opt/bitnami/scripts/redis/run.sh --maxmemory-policy volatile-ttl --maxmemory 2mb
 
   redis-replica-dos:
     image: 'bitnami/redis:7.0.4-debian-11-r23'
@@ -34,7 +34,7 @@ services:
       - REDIS_MASTER_PORT_NUMBER=6379
       - REDIS_MASTER_PASSWORD=master1234
       - REDIS_PASSWORD=replica1234
-    command: /opt/bitnami/scripts/redis/run.sh --maxmemory-policy noeviction --maxmemory 256mb
+    command: /opt/bitnami/scripts/redis/run.sh --maxmemory-policy volatile-ttl --maxmemory 2mb
 
   postgresql:
     image: postgres
