--- a/redis-node3-random.conf
+++ b/redis-node3-random.conf
@@ -3,5 +3,5 @@ cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
 maxmemory 2mb
-maxmemory-policy volatile-ttl
+maxmemory-policy allkeys-random
 appendonly yes
