--- a/redis-node2-random.conf
+++ b/redis-node2-random.conf
@@ -1,7 +1,7 @@
-port 6381
+port 6380
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
 maxmemory 2mb
-maxmemory-policy volatile-ttl
+maxmemory-policy allkeys-random
 appendonly yes
