--- a/redis-node2.conf
+++ b/redis-node2.conf
@@ -3,5 +3,5 @@ cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
 maxmemory 2mb
-maxmemory-policy allkeys-lru
+maxmemory-policy volatile-ttl
 appendonly yes
