--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-clasic-lru": "nodemon ./clasico/index-lru.js",
-    "start-clasic-mru": "nodemon ./clasico/index-mru.js",
-    "start-partition-lru": "nodemon ./particion/index-lru.js",
-    "start-partition-mru": "nodemon ./particion/index-mru.js",
-    "start-replica-lru": "nodemon ./replica/index-lru.js",
-    "start-replica-mru": "nodemon ./replica/index-mru.js"
+    "start-clasic": "nodemon ./index-clasico.js",
+    "start-partition": "nodemon ./index-particion.js",
+    "start-replica": "nodemon ./index-replica.js"
   },
   "keywords": [],
   "author": "",
