--- a/docker-compose-clasico-allkeys-random.yml
+++ b/docker-compose-clasico-allkeys-random.yml
@@ -3,6 +3,9 @@ services:
     image: 'bitnami/redis:7.0.4-debian-11-r23'
     expose:
       - '6379'
+    networks:
+      ipv4_network:
+        ipv4_address: 172.18.0.2
     environment:
       - REDIS_PASSWORD=master1234
     command: /opt/bitnami/scripts/redis/run.sh --maxmemory-policy allkeys-random --maxmemory 2mb
@@ -19,6 +22,14 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
       - ./db-init:/docker-entrypoint-initdb.d
+
+networks:
+  ipv4_network:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.18.0.0/16
 
 volumes:
   db_data: {}
