--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.7.0",
     "@grpc/proto-loader": "^0.7.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.1",
     "ioredis": "^5.4.0",
     "lodash.random": "^3.2.0",
