--- a/01clasico-random/docker-compose.yml
+++ b/01clasico-random/docker-compose.yml
@@ -1,11 +1,12 @@
 services:
-  redis-clasic-mru:
+  redis-clasic-random:
     image: 'bitnami/redis:7.0.4-debian-11-r23'
+    container_name: redis-random
     expose:
       - '6379'
     networks:
       ipv4_network:
-        ipv4_address: 172.20.0.2
+        ipv4_address: 173.18.0.2
     environment:
       - REDIS_PASSWORD=master1234
     command: /opt/bitnami/scripts/redis/run.sh --maxmemory-policy allkeys-random --maxmemory 10mb
@@ -19,17 +20,20 @@ services:
       POSTGRES_DB: ramos
     ports:
       - "5454:5432"
+    networks:
+      ipv4_network:
+        ipv4_address: 173.18.0.10
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./db-init:/docker-entrypoint-initdb.d
-
+      - ../db-init:/docker-entrypoint-initdb.d
+    
 networks:
   ipv4_network:
     driver: bridge
     ipam:
       driver: default
       config:
-        - subnet: 172.20.0.0/16
+        - subnet: 173.18.0.0/16
 
 volumes:
   db_data: {}
