--- a/03cluster-random/docker-compose.yml
+++ b/03cluster-random/docker-compose.yml
@@ -81,9 +81,12 @@ services:
       POSTGRES_DB: ramos
     ports:
       - "5454:5432"
+    networks:
+      redis_cluster_net:
+        ipv4_address: 173.18.0.10
     volumes:
       - db_data:/var/lib/postgresql/data
-      - ./db-init:/docker-entrypoint-initdb.d
+      - ../db-init:/docker-entrypoint-initdb.d
 
 networks:
   redis_cluster_net:
