--- a/docker/04cluster-volatile-ttl/redis/redis.conf
+++ b/docker/04cluster-volatile-ttl/redis/redis.conf
@@ -2,6 +2,6 @@ port 6379
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
-maxmemory 10mb
-maxmemory-policy allkeys-random
+maxmemory 5mb
+maxmemory-policy volatile-ttl
 appendonly yes
