--- a/docker/03cluster-random/redis/redis.conf
+++ b/docker/03cluster-random/redis/redis.conf
@@ -2,6 +2,6 @@ port 6379
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
-maxmemory 10mb
-maxmemory-policy volatile-ttl
+maxmemory 5mb
+maxmemory-policy allkeys-random
 appendonly yes
