--- a/docker/04cluster-lfu/redis/redis.conf
+++ b/docker/04cluster-lfu/redis/redis.conf
@@ -3,5 +3,5 @@ cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
 maxmemory 5mb
-maxmemory-policy volatile-ttl
+maxmemory-policy allkeys-lfu
 appendonly yes
